tdf#120774: remove 7-year-old workaround of now non-existent bug

Fix of tdf#41996 is a workaround of kde4-specific condition and
has been since disabled on OS X (as tdf#51023). kde5 comes with
a new implementation of DnD and slide sorter in Impress now
exhibits exactly the same symptoms as on OS X in tdf#51023

Since kde4 is unsupported and remaining platforms (gtk[23], Win)
never had issues with DnD in slide sorter, kill the workaround
with fire (= disable it globally)

Change-Id: Ib9482dd5371ce73cdb86c3e5bbc5e46af65b9905
Reviewed-on: https://gerrit.libreoffice.org/68674
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>